added some abstractions & layed out menus